# todo-auth-react-dj

./: .gitignore  README.md
backened/: db.sqlite3  pyproject.toml
backened/core/: settings.py  urls.py
backened/staff/: admin.py  forms.py  models.py  serializers.py  urls.py
backened/staff/migrations/: 0001_initial.py
backened/static_local/css/: message.css  popup.css  styles.css
backened/static_local/file/: robots.txt
backened/static_local/js/: popup.js
backened/todos/: admin.py  tests.py  urls.py  views.py
backened/todos/migrations/: 0001_initial.py
frontend/: package-lock.json
frontend/src/: App.js  index.js
frontend/src/components/: Header.js  Nav.css  Nav.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: CreateTodo.js  HomePage.js  LoginPage.js  Todo.js  TodosPage.js
frontend/src/utils/: PrivateRoute.js  useAxios.js
